--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -1,3 +1,5 @@
+{% load django_bootstrap5 %}
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -6,14 +8,19 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>base django</title>
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
+
 </head>
 <body>
-    <h1>django start</h1>
+    <div class="container">
+        <h1>django start</h1>
 
-    {% block content %}
-    {% endblock %}
+        {% block content %}
+        {% endblock %}
 
-    <hr/>
-    &copy; 2024 ssw
+        <hr/>
+        &copy; 2024 ssw
+    </div>
 </body>
 </html>
